--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express-rate-limit": "^7.5.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
+    "socket.io": "^4.8.1",
     "uuid": "^11.1.0",
     "xlsx": "^0.18.5"
   }
