--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "csurf": "^1.2.2",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.5.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
